@@ -1,0 +1,5 @@
+SECTIONS
+{
+  .empty : {}
+  ASSERT (!SIZEOF(.empty), "Empty is not empty")
+}
